opsschool_cloudformation_jenkins.yaml
---
Parameters:
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t1.micro, t2.nano, t2.micro, t2.small, t2.medium, t2.large, m1.small,
      m1.medium, m1.large, m1.xlarge, m2.xlarge, m2.2xlarge, m2.4xlarge, m3.medium,
      m3.large, m3.xlarge, m3.2xlarge, m4.large, m4.xlarge, m4.2xlarge, m4.4xlarge,
      m4.10xlarge, c1.medium, c1.xlarge, c3.large, c3.xlarge, c3.2xlarge, c3.4xlarge,
      c3.8xlarge, c4.large, c4.xlarge, c4.2xlarge, c4.4xlarge, c4.8xlarge, g2.2xlarge,
      g2.8xlarge, r3.large, r3.xlarge, r3.2xlarge, r3.4xlarge, r3.8xlarge, i2.xlarge,
      i2.2xlarge, i2.4xlarge, i2.8xlarge, d2.xlarge, d2.2xlarge, d2.4xlarge, d2.8xlarge,
      hi1.4xlarge, hs1.8xlarge, cr1.8xlarge, cc2.8xlarge, cg1.4xlarge]
    ConstraintDescription: must be a valid EC2 instance type.
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
Mappings:
  AWSRegionToAMIUbuntu:
      us-east-1:
          AMI: ami-0f9351b59be17920e
      us-east-2:
          AMI: ami-0b19eeac8c68a0d2d
      us-west-1:
          AMI: ami-0e066bd33054ef120
      us-west-2:
          AMI: ami-0afae182eed9d2b46
      ca-central-1:
          AMI: ami-0855ce2497d6ac2d9
  AWSRegionToAMI:
# amazon linux ami-s
      us-east-1:
          AMI: ami-013be31976ca2c322
      us-east-2:
          AMI: ami-0ea8f8e0d477657eb
      us-west-1:
          AMI: ami-07585467
      us-west-2:
          AMI: ami-79873901
      ca-central-1:
          AMI: ami-32bb0556

Resources:
  Jenkins:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance.html
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs: ''
      ImageId: !FindInMap [AWSRegionToAMIUbuntu, !Ref "AWS::Region", AMI]
      InstanceType: !Ref 'InstanceType'
      KeyName: !Ref 'KeyName'
      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref MonitoringSecurityGroup
      Tags:
        -
          Key: Name
          Value: Jenkins
      UserData:
        Fn::Base64: |
          #!/bin/bash
          # Java install - adjust if needed
          apt-get install openjdk-8-jdk -y -q

          #install Jenkins
          wget -q -O - https://pkg.jenkins.io/debian/jenkins-ci.org.key | sudo apt-key add -
          sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
          sudo apt-get update
          sudo apt-get install jenkins

  JenkinsIP:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-eip.html
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref Jenkins

  SSHSecurityGroup:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22

  MonitoringSecurityGroup:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Jenkins Default ports
      # bases on this https://github.com/prometheus/prometheus/wiki/Default-port-allocations
      # opened for Prometheus server, Node exporter, 
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '8080'  # opened for Prometheus server
        ToPort: '8080'
        CidrIp: 0.0.0.0/0
